[package]
name = "example"
version = "0.0.1"
authors = ["Matt Howlett"]
edition = "2018"
repository = "https://github.com/mhowlett/kafka-protocol-rs"


[dependencies]
tokio = { version = "0.2.22", features = ["full"] }
futures = { version = "0.3.5", features = ["compat", "io-compat"] }
rskafka = { version = "=0.0.1", path = "../rskafka" }
env_logger = "0.7.*"