[package]
name = "kafka-transport"
version = "0.0.1"
authors = ["Gardner Vickers <gardner@vickers.me>"]
edition = "2018"
repository = "https://github.com/gardnervickers/kafka-protocol-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.22", features = ["full"] }
futures = "0.3.5"
pin-project = "0.3.2"
bytes = "0.4.12"
kafka-protocol = {version = "=0.0.1", path = "../kafka-protocol"}
kafka-api = {version = "0.0.1", path = "../kafka-api"}

[dev-dependencies]
futures-test = "0.3.5"
